--- a/web/M1/venditore.html
+++ b/web/M1/venditore.html
@@ -23,7 +23,7 @@ and open the template in the editor.
         <br /> 
                      <form action="user_form.asp" method="get">
 
-        <table border="1">
+        <table>
     <tr>
         <th></th>
         <th></th>
