--- a/web/M1/cliente.html
+++ b/web/M1/cliente.html
@@ -22,7 +22,7 @@ and open the template in the editor.
         <br /> 
         <br /> 
         
-        <table border="1">
+        <table>
     <tr>
         <th>Nome del servizio</th>
         <th>Foto descrittiva</th>
@@ -41,7 +41,7 @@ src="alto.jpg" width="120" height="100"></td>
     <tr>
         <td>Prodotto finanziario medio-alto rischio</td>
         <td><img title="foto descrittiva" alt="Foto prodotto medio alto rischio" 
-src="medio alto.jpg" width="120" height="100"></td>
+src="medioalto.jpg" width="120" height="100"></td>
         <td>1</td>
         <td>125 €</td>
         <td><a href=cliente.html > Cliente </a></td>
@@ -57,7 +57,7 @@ src="medio.jpg" width="120" height="100"></td>
         <tr>
         <td>Prodotto finanziario medio-basso rischio</td>
         <td><img title="foto descrittiva" alt="Foto prodotto medio basso rischio" 
-src="medio basso.jpg" width="120" height="100"></td>
+src="mediobasso.jpg" width="120" height="100"></td>
         <td>1</td>
         <td>75 €</td>
         <td><a href=cliente.html > Cliente </a></td>
